# Nord

./: .envrc  .gitignore  CMakeLists.txt  README.md  flake.nix  shell.qml
plugin/src/Nord/: CMakeLists.txt  appdb.cpp  appdb.hpp  cutils.cpp  cutils.hpp  imageanalyser.cpp  imageanalyser.hpp  qalculator.cpp  qalculator.hpp  requests.cpp  requests.hpp  toaster.cpp  toaster.hpp
plugin/src/Nord/Blobs/: CMakeLists.txt  blobrect.cpp
plugin/src/Nord/Components/: CMakeLists.txt  buttonrow.cpp  buttonrow.hpp  lazylistview.cpp  lazylistview.hpp  wavyline.cpp  wavyline.hpp
plugin/src/Nord/Config/: CMakeLists.txt  anim.cpp  anim.hpp  appearanceconfig.cpp  appearanceconfig.hpp  backgroundconfig.hpp  barconfig.hpp  borderconfig.hpp  config.cpp  config.hpp  configattached.cpp  configattached.hpp  configobject.cpp  configobject.hpp  dashboardconfig.hpp  font.cpp  font.hpp  fontbuilder.cpp  fontbuilder.hpp  generalconfig.hpp  launcherconfig.hpp  lockconfig.hpp  monitorconfigmanager.cpp  monitorconfigmanager.hpp  nexusconfig.hpp  notifsconfig.hpp  osdconfig.hpp  rootconfig.cpp  rootconfig.hpp  serviceconfig.hpp  sessionconfig.hpp  sidebarconfig.hpp  tokens.cpp  tokens.hpp  tokensattached.cpp  tokensattached.hpp  userpaths.hpp  utilitiesconfig.hpp  winfoconfig.hpp
plugin/src/Nord/Images/: CMakeLists.txt  cachingimageprovider.cpp  cachingimageprovider.hpp  imagecacher.cpp  imagecacher.hpp  iutils.cpp  iutils.hpp
plugin/src/Nord/Internal/: CMakeLists.txt  circularbuffer.cpp  circularbuffer.hpp  circularindicatormanager.cpp  circularindicatormanager.hpp  hyprdevices.cpp  (+9 more)
(+279 files in other folders)
